--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,4 +14,5 @@ install:
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test -Dselenide.headless=true --info 
+  # запускаем тест, флаг --info позволяет выводить больше информации
